--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "express": "^4.16.2",
     "htmlparser2": "^3.9.2",
-    "postcss": "^6.0.13"
+    "postcss": "^6.0.13",
+    "yargs": "^10.0.3"
+  },
+  "bin": {
+    "autumn": "./bin/autumn.js"
   }
 }
